TFG/force-app/main/default/objects/Booking__c/fields/CheckIn__c.field-meta.xml
<CustomField>
    <fullName>CheckIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the check in has been done</description>
    <label>Check-In</label>
    <type>Checkbox</type>
</CustomField>