TFG/force-app/main/default/objects/Booking__c/fields/CheckOut__c.field-meta.xml
<CustomField>
    <fullName>CheckOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the check out has been done</description>
    <label>Check-Out</label>
    <type>Checkbox</type>
</CustomField>