TFG/force-app/main/default/objects/Booking__c/fields/NumberOfGuests__c.field-meta.xml
<CustomField>
    <fullName>NumberOfGuests__c</fullName>
    <label>Number Of Guests</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>