TFG/force-app/main/default/objects/Booking__c/fields/QrCode__c.field-meta.xml
<CustomField>
    <fullName>QrCode__c</fullName>
    <formula>IF( CheckIn__c &amp;&amp; !CheckOut__c ,   
				IMAGE(&quot;https://api.qrserver.com/v1/create-qr-code/?size=150x150&amp;data=https://orgfarm-ee51864b39-dev-ed.develop.my.site.com/client?c__Id=&quot; &amp; UUID__c , &quot;qr code.&quot;, 150,150)
				, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR</label>
    <type>Text</type>
</CustomField>