TFG/force-app/main/default/objects/Booking__c/fields/ReservationDate__c.field-meta.xml
<CustomField>
    <fullName>ReservationDate__c</fullName>
    <label>Reservation Date</label>
    <type>Date</type>
</CustomField>