TFG/force-app/main/default/objects/Booking__c/fields/SpecialRequests__c.field-meta.xml
<CustomField>
    <fullName>SpecialRequests__c</fullName>
    <label>Special Requests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>