TFG/force-app/main/default/objects/Booking__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>Stores a temporal UUID Allowing clients to see the page with all requests of its booking</description>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>