TFG/force-app/main/default/objects/Booking__c/listViews/CheckInToday.listView-meta.xml
<ListView>
    <fullName>CheckInToday</fullName>
    <columns>NAME</columns>
    <columns>Guest__c</columns>
    <columns>NumberOfGuests__c</columns>
    <columns>CheckInDate__c</columns>
    <columns>CheckOutDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CheckInDate__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Check-In Hoy</label>
</ListView>